Issue #5 Implement Stair Layout
- Fix some lint warnings
- Various fixes

--- a/tests/data/example_0001.yaml
+++ b/tests/data/example_0001.yaml
@@ -48,7 +48,7 @@ registers:
       - name: A4
         width: 8
 
+
 layout:
-   registers: lr
-   register_name: left
-   field_name: center
+  field-name-align: center
+  register-layout: tb
