Issue #22 Test on Linux
Added changes to support running on Linux and Python 3.10

- Support Linux truetype fonts
- Fix regfmt script generation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ dependencies = [
 "Issue Tracker" = "https://github.com/kickingvegas/regfmt/issues"
 
 [project.scripts]
-regfmt = "regfmt.regfmt:main"
+regfmt = "regfmt:main"
 
 
 #[tool.setuptools.packages.find]
