--- a/tests/data/register-stair-left.yaml
+++ b/tests/data/register-stair-left.yaml
@@ -11,12 +11,13 @@ registers:
         name: Coprocessor Usable
 
       - width: 1
-        name: Boostrap Exception Vectors
+        name: Bootstrap Exception Vectors
 
       - width: 2
         name: Parity Errors
 
       - width: 4
-        name: Interrupt
+        name: Interrupt Waiting
+
 layout:
   field-name-align: stair-left
