Prepare for launch
- Clean up README.org
- Bump to version 0.1.10

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "regfmt"
-version = "0.1.10a1"
+version = "0.1.10"
 authors = [
   { name="Charles Choi", email="kickingvegas@gmail.com"}
 ]
